--- a/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
+++ b/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
@@ -128,7 +128,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pYA-Og-56b">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="kotlin2" translatesAutoresizingMaskIntoConstraints="NO" id="pYA-Og-56b">
                                 <rect key="frame" x="62" y="509" width="250" height="250"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -149,6 +149,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="kotlin2" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
