--- a/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
+++ b/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
@@ -150,43 +150,93 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vrs-BA-LOx">
-                                <rect key="frame" x="58" y="102" width="187" height="328"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vrs-BA-LOx">
+                                <rect key="frame" x="0.0" y="44" width="290" height="336.33333333333331"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swift" translatesAutoresizingMaskIntoConstraints="NO" id="kce-fM-7hd">
-                                        <rect key="frame" x="0.0" y="8" width="187" height="245"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Swift" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFS-p3-7vf">
-                                        <rect key="frame" x="61" y="281" width="64" height="39"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFS-p3-7vf">
+                                        <rect key="frame" x="20" y="278" width="250" height="38.333333333333314"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="32"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swift" translatesAutoresizingMaskIntoConstraints="NO" id="kce-fM-7hd">
+                                        <rect key="frame" x="20" y="20" width="250" height="250"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstItem="oFS-p3-7vf" firstAttribute="top" secondItem="kce-fM-7hd" secondAttribute="bottom" constant="8" id="35T-6B-jcC"/>
+                                    <constraint firstAttribute="trailing" secondItem="kce-fM-7hd" secondAttribute="trailing" constant="20" id="IdU-Nz-zom"/>
+                                    <constraint firstAttribute="bottom" secondItem="oFS-p3-7vf" secondAttribute="bottom" constant="20" id="MTq-jG-81H"/>
+                                    <constraint firstItem="oFS-p3-7vf" firstAttribute="leading" secondItem="Vrs-BA-LOx" secondAttribute="leading" constant="20" id="Mid-r2-Mr0"/>
+                                    <constraint firstItem="kce-fM-7hd" firstAttribute="top" secondItem="Vrs-BA-LOx" secondAttribute="top" constant="20" id="THs-K3-anX"/>
+                                    <constraint firstAttribute="trailing" secondItem="oFS-p3-7vf" secondAttribute="trailing" constant="20" id="ewa-kz-tfb"/>
+                                    <constraint firstItem="kce-fM-7hd" firstAttribute="leading" secondItem="Vrs-BA-LOx" secondAttribute="leading" constant="20" id="rAw-s3-FWi"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ezL-KV-FJS">
-                                <rect key="frame" x="107" y="623" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fKn-JY-KRB"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="fKn-JY-KRB" firstAttribute="bottom" secondItem="ezL-KV-FJS" secondAttribute="bottom" constant="134" id="GrI-JA-79j"/>
-                            <constraint firstItem="Vrs-BA-LOx" firstAttribute="leading" secondItem="fKn-JY-KRB" secondAttribute="leading" constant="58" id="gjK-Yr-DB9"/>
-                            <constraint firstItem="ezL-KV-FJS" firstAttribute="leading" secondItem="fKn-JY-KRB" secondAttribute="leading" constant="107" id="uN3-Ea-gfx"/>
-                            <constraint firstItem="Vrs-BA-LOx" firstAttribute="top" secondItem="fKn-JY-KRB" secondAttribute="top" constant="58" id="vtu-Ao-AmM"/>
+                            <constraint firstItem="Vrs-BA-LOx" firstAttribute="leading" secondItem="fKn-JY-KRB" secondAttribute="leading" id="KLg-jw-u4v"/>
+                            <constraint firstItem="Vrs-BA-LOx" firstAttribute="top" secondItem="fKn-JY-KRB" secondAttribute="top" id="Y9N-gJ-ZPO"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6Y-bp-Ept" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="608.79999999999995" y="824.6305418719212"/>
+            <point key="canvasLocation" x="420" y="1500"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="WA2-0E-GJI">
+            <objects>
+                <viewController id="uM9-p6-Pzf" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JwZ-o7-7yv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6uh-H0-Oyh">
+                                <rect key="frame" x="25" y="153" width="324" height="448"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qaX-8d-Gah">
+                                        <rect key="frame" x="8" y="8" width="308" height="432"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q2q-Ei-4xB">
+                                                <rect key="frame" x="8" y="8" width="292" height="416"/>
+                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="q2q-Ei-4xB" firstAttribute="leading" secondItem="qaX-8d-Gah" secondAttribute="leadingMargin" id="8MH-md-KKr"/>
+                                            <constraint firstItem="q2q-Ei-4xB" firstAttribute="top" secondItem="qaX-8d-Gah" secondAttribute="topMargin" id="Cri-o6-QaN"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="q2q-Ei-4xB" secondAttribute="bottom" id="DBT-9w-9xw"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="q2q-Ei-4xB" secondAttribute="trailing" id="xI7-Vd-rit"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottomMargin" secondItem="qaX-8d-Gah" secondAttribute="bottom" id="T3o-tQ-3ot"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="qaX-8d-Gah" secondAttribute="trailing" id="T5Z-yB-wr1"/>
+                                    <constraint firstItem="qaX-8d-Gah" firstAttribute="leading" secondItem="6uh-H0-Oyh" secondAttribute="leadingMargin" id="V3X-lJ-utU"/>
+                                    <constraint firstItem="qaX-8d-Gah" firstAttribute="top" secondItem="6uh-H0-Oyh" secondAttribute="topMargin" id="VT5-wy-9DP"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="y1F-GQ-atf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="y1F-GQ-atf" firstAttribute="bottom" secondItem="6uh-H0-Oyh" secondAttribute="bottom" constant="177" id="1yt-i9-dfu"/>
+                            <constraint firstItem="6uh-H0-Oyh" firstAttribute="top" secondItem="y1F-GQ-atf" secondAttribute="top" constant="109" id="6pB-JR-lEI"/>
+                            <constraint firstItem="y1F-GQ-atf" firstAttribute="trailing" secondItem="6uh-H0-Oyh" secondAttribute="trailing" constant="26" id="A7A-nr-59c"/>
+                            <constraint firstItem="6uh-H0-Oyh" firstAttribute="leading" secondItem="y1F-GQ-atf" secondAttribute="leading" constant="25" id="Ef1-jy-y3R"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4oD-Bd-vjp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="420" y="2167.2413793103451"/>
         </scene>
         <!--View Controller2-->
         <scene sceneID="aur-hO-gDS">
@@ -263,12 +313,62 @@
             </objects>
             <point key="canvasLocation" x="1733.5999999999999" y="43.596059113300491"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="BAD-Z1-8uB">
+            <objects>
+                <viewController id="qok-ru-PTW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9I4-C6-2Dw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ca5-wL-5b9">
+                                <rect key="frame" x="58" y="102" width="227" height="456"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLT-LN-lw9">
+                                        <rect key="frame" x="20" y="397.66666666666669" width="187" height="38.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="32"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swift" translatesAutoresizingMaskIntoConstraints="NO" id="OKK-aI-xXD">
+                                        <rect key="frame" x="20" y="20" width="187" height="369.66666666666669"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstItem="OKK-aI-xXD" firstAttribute="top" secondItem="Ca5-wL-5b9" secondAttribute="top" constant="20" id="3Jq-Ck-sLO"/>
+                                    <constraint firstAttribute="width" constant="227" id="9AO-bn-FWu"/>
+                                    <constraint firstItem="pLT-LN-lw9" firstAttribute="leading" secondItem="Ca5-wL-5b9" secondAttribute="leading" constant="20" id="I8R-gc-Lr3"/>
+                                    <constraint firstAttribute="height" constant="456" id="RnY-Gv-HpU"/>
+                                    <constraint firstAttribute="trailing" secondItem="OKK-aI-xXD" secondAttribute="trailing" constant="20" id="cYK-cF-EQn"/>
+                                    <constraint firstAttribute="bottom" secondItem="pLT-LN-lw9" secondAttribute="bottom" constant="20" id="cfp-NM-aZ7"/>
+                                    <constraint firstAttribute="trailing" secondItem="pLT-LN-lw9" secondAttribute="trailing" constant="20" id="izd-g4-wYZ"/>
+                                    <constraint firstItem="pLT-LN-lw9" firstAttribute="top" secondItem="OKK-aI-xXD" secondAttribute="bottom" constant="8" id="jeq-Za-BJR"/>
+                                    <constraint firstItem="OKK-aI-xXD" firstAttribute="leading" secondItem="Ca5-wL-5b9" secondAttribute="leading" constant="20" id="lQP-AU-PlU"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="G7j-wP-Rfg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ca5-wL-5b9" firstAttribute="top" secondItem="G7j-wP-Rfg" secondAttribute="top" constant="58" id="NIR-mf-FQY"/>
+                            <constraint firstItem="Ca5-wL-5b9" firstAttribute="leading" secondItem="G7j-wP-Rfg" secondAttribute="leading" constant="58" id="o6d-R3-MWj"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SPL-i8-Ep2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="420" y="825"/>
+        </scene>
     </scenes>
     <resources>
         <image name="kotlin2" width="250" height="250"/>
         <image name="swift" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
